:bug: fix min-width/max-width nav overlap

--- a/src/pages/Home/Nav/styles.module.scss
+++ b/src/pages/Home/Nav/styles.module.scss
@@ -15,7 +15,7 @@ nav {
       padding-bottom: 25px;
       border-right: 4px solid #2C2C2C;
 
-      @media only screen and (max-width: 1100px) and (min-width: 700px) {
+      @media only screen and (max-width: 1100px) and (min-width: 701px) {
         border-right: 0;
       }
     }
